# whiskerless

./: .editorconfig  .gitignore  .renovaterc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  hacs.json  pyproject.toml
.forgejo/workflows/: ci.yml  publish.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md  protocol_contribution.yml
.github/workflows/: hassfest.yml  release-macos.yml
custom_components/whiskerless/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  strings.json  switch.py  time.py
custom_components/whiskerless/devices/: __init__.py  litter_robot_4.py
docs/: how-it-works.md  recovery.md  reverse-engineering.md
docs/devices/litter-robot-4/: commands.md  compatibility.md  protocol.md  registers.md
docs/devices/litter-robot-4/provisioning/: README.md  whisker_config.proto  whisker_mqtt_config.proto
docs/setup/: certificates.md  home-assistant.md  mqtt-broker.md
examples/litter-robot-4/: README.md  automations.yaml
packaging/: README.md  changelog-section.sh  entitlements.plist  forgejo-release.sh  github-release.sh  launcher.py
src/whiskerless/: __init__.py  cli.py  exceptions.py  mqtt.py  safety.py
src/whiskerless/ble/: __init__.py  messages.py  protobuf.py  provision.py  transport.py
src/whiskerless/devices/: __init__.py
src/whiskerless/devices/litter_robot_4/: __init__.py  client.py  codec.py  commands.py  const.py  link.py  models.py  protocol.py
tests/: test_codec.py  test_commands.py  test_models.py  test_protobuf.py  test_protocol.py  test_provision.py  test_safety.py
tests/integration/: __init__.py  conftest.py  const.py  test_config_flow.py  test_diagnostics.py  test_entities.py  test_init.py
tests/integration/fixtures/: lr4_state.json
